--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
 			<version>3.9</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.16</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -31,7 +38,7 @@
 							<archive>
 								<manifest>
 									<mainClass>
-										org.protor.sandbox.Test01
+										org.protor.sandbox.Test02
 									</mainClass>
 								</manifest>
 							</archive>
